<?xml version="1.0"?>
<package>
    <name>irl</name>
    <version>0.0.0</version>
    <description>The IRL (edwin) package!!!!</description>

    <!-- One maintainer tag required, multiple allowed, one person per tag -->
    <!-- Example:  -->
    <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
    <maintainer email="kevin.zhang@students.olin.edu">Kevin Zhang</maintainer>


    <!-- One license tag required, multiple allowed, one license per tag -->
    <!-- Commonly used license strings: -->
    <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
    <license>MIT</license>


    <!-- Url tags are optional, but mutiple are allowed, one per tag -->
    <!-- Optional attribute type can be: website, bugtracker, or repository -->
    <!-- Example: -->
    <!-- <url type="website">http://wiki.ros.org/edwin</url> -->


    <!-- Author tags are optional, mutiple are allowed, one per tag -->
    <!-- Authors do not have to be maintianers, but could be -->
    <!-- Example: -->
    <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


    <!-- The *_depend tags are used to specify dependencies -->
    <!-- Dependencies can be catkin packages or system dependencies -->
    <!-- Examples: -->
    <!-- Use build_depend for packages you need at compile time: -->
    <!--   <build_depend>message_generation</build_depend> -->
    <!-- Use buildtool_depend for build tool packages: -->
    <!--   <buildtool_depend>catkin</buildtool_depend> -->
    <!-- Use run_depend for packages you need at runtime: -->
    <!--   <run_depend>message_runtime</run_depend> -->
    <!-- Use test_depend for packages you need only for testing: -->
    <!--   <test_depend>gtest</test_depend> -->



    <!-- <build_depend>rosserial</build_depend> -->
    <!-- <run_depend>rosserial</run_depend> -->

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>roslib</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>image_transport</build_depend>
    <build_depend>message_generation</build_depend>

    <!-- UR5 -->
    <build_depend>ur_bringup</build_depend>
    <build_depend>ur_description</build_depend>
    <build_depend>ur_driver</build_depend>
    <build_depend>ur_gazebo</build_depend>
    <build_depend>ur_kinematics</build_depend>
    <build_depend>ur_msgs</build_depend>
    <build_depend>ur5_moveit_config</build_depend>

    <build_depend>libopenni-dev</build_depend>
    <build_depend>libusb-1.0-dev</build_depend>
    <build_depend>libopenni-sensor-primesense-dev</build_depend>

    <build_depend>opengl</build_depend>
    <build_depend>glut</build_depend>
    <build_depend>libxmu-dev</build_depend>
    <build_depend>libxi-dev</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>roslib</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>cv_bridge</run_depend>
    <run_depend>image_transport</run_depend>
    <run_depend>message_runtime</run_depend>

    <!-- UR5 -->
    <run_depend>ur_bringup</run_depend>
    <run_depend>ur_description</run_depend>
    <run_depend>ur_driver</run_depend>
    <run_depend>ur_gazebo</run_depend>
    <run_depend>ur_kinematics</run_depend>
    <run_depend>ur_msgs</run_depend>
    <run_depend>ur5_moveit_config</run_depend>

    <run_depend>libopenni-dev</run_depend>
    <run_depend>libusb-1.0-dev</run_depend>
    <run_depend>libopenni-sensor-primesense-dev</run_depend>

    <run_depend>opengl</run_depend>
    <run_depend>glut</run_depend>
    <run_depend>libxmu-dev</run_depend>
    <run_depend>libxi-dev</run_depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
    </export>
        <!-- Other tools can request additional information be placed here -->
</package>
