<?xml version="1.0"?>
<package format="2">
    <name>hiro_core</name>
    <version>0.0.0</version>
    <description>The HIRo Human Interaction Robotics Lab at Olin</description>

    <maintainer email="alee2@olin.edu">Audrey Lee</maintainer>
    <maintainer email="mvu@olin.edu">Khang Vu</maintainer>

    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>roslib</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>image_transport</build_depend>
    <build_depend>message_generation</build_depend>

    <!-- UR5 -->
    <!-- <build_depend>ur_bringup</build_depend>
    <build_depend>ur_description</build_depend>
    <build_depend>ur_driver</build_depend>
    <build_depend>ur_gazebo</build_depend>
    <build_depend>ur_kinematics</build_depend>
    <build_depend>ur_msgs</build_depend>
    <build_depend>ur5_moveit_config</build_depend> -->

    <build_depend>libopenni-dev</build_depend>
    <build_depend>libusb-1.0-dev</build_depend>
    <build_depend>libopenni-sensor-primesense-dev</build_depend>

    <build_depend>opengl</build_depend>
    <build_depend>glut</build_depend>
    <build_depend>libxmu-dev</build_depend>
    <build_depend>libxi-dev</build_depend>

    <!-- MoveIt! -->
    <build_depend>eigen</build_depend>
    <build_depend>moveit_core</build_depend>
    <build_depend>moveit_ros_planning</build_depend>
    <build_depend>moveit_ros_planning_interface</build_depend>
    <build_depend>moveit_ros_perception</build_depend>
    <build_depend>interactive_markers</build_depend>
    <build_depend>geometric_shapes</build_depend>
    <build_depend>moveit_visual_tools</build_depend>
    <build_depend>rviz_visual_tools</build_depend>
    <build_depend>pcl_ros</build_depend>
    <build_depend>pcl_conversions</build_depend>
    <build_depend>rosbag</build_depend>
    <build_depend>tf2_ros</build_depend>
    <build_depend>tf2_eigen</build_depend>
    <build_depend>tf2_geometry_msgs</build_depend>
    <build_depend>ur_robot_driver</build_depend>
    
    <exec_depend>roscpp</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>roslib</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>cv_bridge</exec_depend>
    <exec_depend>image_transport</exec_depend>
    <exec_depend>message_runtime</exec_depend>
    <exec_depend>ur_robot_driver</exec_depend>
    <!-- UR5 -->
    <!-- <exec_depend>ur_bringup</exec_depend>
    <exec_depend>ur_description</exec_depend>
    <exec_depend>ur_driver</exec_depend>
    <exec_depend>ur_gazebo</exec_depend>
    <exec_depend>ur_kinematics</exec_depend>
    <exec_depend>ur_msgs</exec_depend>
    <exec_depend>ur5_moveit_config</exec_depend> -->

    <exec_depend>libopenni-dev</exec_depend>
    <exec_depend>libusb-1.0-dev</exec_depend>
    <exec_depend>libopenni-sensor-primesense-dev</exec_depend>

    <exec_depend>opengl</exec_depend>
    <exec_depend>glut</exec_depend>
    <exec_depend>libxmu-dev</exec_depend>
    <exec_depend>libxi-dev</exec_depend>

    <!-- MoveIt! -->
    <exec_depend>moveit_core</exec_depend>
    <exec_depend>moveit_commander</exec_depend>
    <exec_depend>moveit_fake_controller_manager</exec_depend>
    <exec_depend>moveit_ros_planning_interface</exec_depend>
    <exec_depend>moveit_ros_perception</exec_depend>
    <exec_depend>interactive_markers</exec_depend>
    <exec_depend>moveit_visual_tools</exec_depend>
    <exec_depend>rviz_visual_tools</exec_depend>
    <exec_depend>joy</exec_depend>
    <exec_depend>pcl_ros</exec_depend>
    <exec_depend>pcl_conversions</exec_depend>
    <exec_depend>rosbag</exec_depend>
    <exec_depend>tf2_ros</exec_depend>
    <exec_depend>tf2_eigen</exec_depend>
    <exec_depend>tf2_geometry_msgs</exec_depend>

    <export>
    </export>
</package>